# appstream

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
adler/: struct.Adler32.html
anyhow/: struct.Error.html
appstream/: all.html  enum.ParseError.html  index.html  sidebar-items.js  struct.AppId.html  struct.Artifact.html  struct.Collection.html  struct.Component.html  struct.ContentRating.html  struct.Image.html  struct.Language.html  struct.License.html  struct.MarkupTranslatableString.html  struct.Release.html  struct.Screenshot.html  struct.TranslatableList.html  struct.TranslatableString.html  struct.Video.html
appstream_rs/: all.html  enum.ArtifactKind.html  enum.Bundle.html  enum.Category.html  enum.Checksum.html  enum.ComponentKind.html  enum.ComponentType.html  enum.ContentAttribute.html  enum.ContentRatingVersion.html  enum.ContentState.html  enum.FirmwareKind.html  enum.Icon.html  enum.Image.html  enum.ImageKind.html  enum.Kudo.html  enum.Launchable.html  enum.ProjectUrl.html  enum.Provide.html  enum.ReleaseKind.html  enum.ReleaseSize.html  enum.ReleaseType.html  enum.ReleaseUrgency.html  enum.Size.html  enum.Translation.html  index.html  sidebar-items.js  struct.AppId.html  struct.Artifact.html  struct.ArtifactBuilder.html  struct.Collection.html  struct.CollectionBuilder.html  struct.Component.html  struct.ComponentBuilder.html  struct.ContentRating.html  struct.Image.html  struct.ImageBuilder.html  struct.Language.html  struct.LanguageBuilder.html  struct.License.html  struct.Release.html  (+7 more)
chrono/: enum.Month.html  enum.Weekday.html  index.html  sidebar-items.js  struct.DateTime.html
demo/: Cargo.toml  org.gnome.design.Contrast.json  test.xml
flate2/: enum.FlushCompress.html  enum.FlushDecompress.html  enum.Status.html  struct.Compress.html  struct.CompressError.html  struct.Decompress.html  struct.DecompressError.html
miniz_oxide/: all.html  enum.DataFormat.html  enum.MZError.html  enum.MZFlush.html  enum.MZStatus.html  index.html  struct.StreamResult.html  type.MZResult.html
src/: app_id.rs  builders.rs  collection.rs  component.rs  content_rating.rs  de.rs  enums.rs  error.rs  language.rs  lib.rs  license.rs  release.rs  requirements.rs  screenshot.rs  translatable_string.rs  xml.rs
strum/: all.html  enum.ParseError.html  index.html  sidebar-items.js  trait.AsStaticRef.html  trait.EnumCount.html  trait.EnumMessage.html  trait.EnumProperty.html  trait.IntoEnumIterator.html  trait.VariantNames.html
strum_macros/: all.html  derive.AsRefStr.html  derive.AsStaticStr.html  derive.Display.html  derive.EnumCount.html  derive.EnumDiscriminants.html  (+8 more)
(+451 files in other folders)
