[package]
name = "appstream"
version = "0.1.2"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"
description = "Appstream files parser"
repository = "https://github.com/bilelmoussaoui/appstream"
keywords = ["appstream", "xml", "parser", "metainfo", "appdata"]
license = "MIT"
exclude = ["tests/*.xml", "tests/*.xml.gz", "tests/*.json"]

[features]
gzip = ["flate2"]


[dependencies]
url = { version = "2.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = [ "derive" ] }
xmltree = "0.10"
serde_derive = "1.0"
anyhow = "1.0"
strum = "0.19"
strum_macros = "0.19"

[dependencies.flate2]
version = "1.0"
optional = true